SIS2-652: Added padding-right on seasonal wheel modal h4 to prevent close button overlap

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/seasonal-wheel.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/seasonal-wheel.css
@@ -199,6 +199,10 @@
 
     & .modal-link__title {
       color: #3d2859;
+
+      h4 {
+        padding-right: 30px;
+      }
     }
   }
 
